<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.CadastrarActivity"
    android:background="@color/principal">

    <TextView
        android:id="@+id/appName_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/shojumaru"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/Cadastro"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_below="@+id/appName_cadastro"
        android:layout_marginTop="45dp"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Cadastrar"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="40dp" />

    <EditText
        android:id="@+id/Login_cadastro"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Cadastro"
        android:layout_marginTop="60dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/DigiEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/senha_cadastro"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login_cadastro"
        android:layout_marginTop="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/DigiSenha"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmsenha_cadastro"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/senha_cadastro"
        android:layout_marginTop="43dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/ConfirmSenha"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/cadastrar_novo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/confirmsenha_cadastro"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/Button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Cadastrar"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="28dp"
        app:cornerRadius="20dp" />

    <Button
        android:id="@+id/BttmLimpar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_below="@id/cadastrar_novo"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/Bttn"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/Limpar"
        android:textAlignment="center"
        android:textColor="@color/letras"
        android:textSize="24dp"
        app:cornerRadius="20dp" />

</RelativeLayout>